--- a/basichtml/table_assignment/index.html
+++ b/basichtml/table_assignment/index.html
@@ -77,6 +77,181 @@
     </table>
     <hr />
     <h1>Task 3:</h1>
+    <table border="1" cellpadding="5">
+      <tr>
+        <th colspan="6" bgcolor="blue">
+          Final Examination Schedule - Fall 2008
+        </th>
+      </tr>
+      <tr>
+        <td bgcolor="yellow"></td>
+        <td bgcolor="yellow">
+          Monday<br />
+          Dec. 15
+        </td>
+        <td bgcolor="yellow">
+          Tuesday<br />
+          Dec. 16
+        </td>
+        <td bgcolor="yellow">
+          Wednesday<br />
+          Dec. 17
+        </td>
+        <td bgcolor="yellow">
+          Thursday<br />
+          Dec. 18
+        </td>
+        <td rowspan="5" bgcolor="pink" align="center">
+          H<br />O<br />M<br />E
+        </td>
+      </tr>
+      <tr>
+        <th bgcolor="blue">8:00 a.m.</th>
+        <td bgcolor="blue" align="center">8M</td>
+        <td bgcolor="blue" align="center">9M</td>
+        <td bgcolor="blue" align="center">9/9:30T</td>
+        <td bgcolor="blue" align="center">8T</td>
+      </tr>
+      <tr align="center">
+        <th bgcolor="grey">10:00 a.m.</th>
+        <td bgcolor="grey">12/12:30T</td>
+        <td bgcolor="grey">11M</td>
+        <td bgcolor="grey">10M</td>
+        <td bgcolor="grey">11T</td>
+      </tr>
+      <tr align="center">
+        <th bgcolor="blue">1:00 p.m.</th>
+        <td bgcolor="blue">1M</td>
+        <td bgcolor="blue">1T</td>
+        <td bgcolor="blue">10T</td>
+        <td bgcolor="blue">12M</td>
+      </tr>
+      <tr align="center">
+        <th bgcolor="grey">3.00 p.m.</th>
+        <td bgcolor="grey">3M</td>
+        <td bgcolor="grey">2T</td>
+        <td bgcolor="grey">2M</td>
+        <td bgcolor="grey">3/3:30T</td>
+      </tr>
+    </table>
+    <hr />
+    <h1>Task 4:</h1>
+    <table border="1" cellpadding="5" cellspacing="0">
+      <tr>
+        <td>1</td>
+        <td colspan="2" align="center">2</td>
+        <td rowspan="2">3</td>
+        <td rowspan="2" colspan="2" align="center">4</td>
+      </tr>
+      <tr>
+        <td colspan="3" align="center">5</td>
+      </tr>
+      <tr>
+        <td>6</td>
+        <td>7</td>
+        <td>8</td>
+        <td colspan="2" align="center">9</td>
+        <td>10</td>
+      </tr>
+      <tr>
+        <td colspan="2" align="center">11</td>
+        <td colspan="3" align="center">12</td>
+        <td rowspan="7">13</td>
+      </tr>
+      <tr>
+        <td rowspan="3">14</td>
+        <td>15</td>
+        <td>16</td>
+        <td>17</td>
+        <td>18</td>
+      </tr>
+      <tr>
+        <td colspan="4" align="center">19</td>
+      </tr>
+      <tr>
+        <td colspan="2" align="center">20</td>
+        <td colspan="2" align="center">21</td>
+      </tr>
+      <tr>
+        <td colspan="5" align="center">22</td>
+      </tr>
+      <tr>
+        <td rowspan="2">23</td>
+        <td colspan="2" align="center">24</td>
+        <td>25</td>
+        <td>26</td>
+      </tr>
+      <tr>
+        <td>27</td>
+        <td colspan="2" align="center">28</td>
+        <td>29</td>
+      </tr>
+    </table>
+    <hr />
+    <h1>Task 5:</h1>
+    <table border="1" cellpadding="5" cellspacing="0">
+      <tr>
+        <th>ID</th>
+        <th>Customer Name</th>
+        <th>Product name</th>
+        <th>Quatity</th>
+        <th>Price</th>
+        <th>Total Price</th>
+      </tr>
+      <tr>
+        <td rowspan="4" bgcolor="yellow">1</td>
+        <td rowspan="4" bgcolor="yellow">Ram</td>
+        <td>Realme c1</td>
+        <td>2</td>
+        <td>6000</td>
+        <td rowspan="4" bgcolor="yellow">17550</td>
+      </tr>
+      <tr>
+        <td>Ram DDR3 8GB</td>
+        <td>2</td>
+        <td>5000</td>
+      </tr>
+      <tr>
+        <td>DairyMilk</td>
+        <td>10</td>
+        <td>500</td>
+      </tr>
+      <tr>
+        <td>cotton candy</td>
+        <td>5</td>
+        <td>50</td>
+      </tr>
+      <tr>
+        <td bgcolor="yellow" rowspan="2">2</td>
+        <td bgcolor="yellow" rowspan="2">Veronica</td>
+        <td>Sony TV "50inch"</td>
+        <td>1</td>
+        <td>60000</td>
+        <td bgcolor="yellow" rowspan="2">80550</td>
+      </tr>
+      <tr>
+        <td>chromecast</td>
+        <td>1</td>
+        <td>3000</td>
+      </tr>
+      <tr>
+        <td bgcolor="black" color="white" colspan="5">
+          <font color="white">Total Amount</font>
+        </td>
+        <td>2,86,000</td>
+      </tr>
+      <tr>
+        <td bgcolor="red" colspan="4"><font color="white">Tax</font></td>
+        <td bgcolor="red"><font color="white">35%</font></td>
+        <td bgcolor="red"><font color="white">28192.50</font></td>
+      </tr>
+      <tr>
+        <td colspan="5">Tax Dedution Balance Amount</td>
+        <td bgcolor="black"><font color="white">52357.50</font></td>
+      </tr>
+    </table>
+    <hr />
+    <h1>Task 6:</h1>
     <b><u>List of Courses for Fall 2013</u></b>
     <ul>
       <li>MDSE 4040: Visual Merchandising</li>
@@ -157,118 +332,72 @@
       </tr>
     </table>
     <hr />
-    <h1>Task 4:</h1>
-    <table border="1" cellpadding="5" cellspacing="0">
+    <h1>Task 7:</h1>
+    <table border="1">
       <tr>
-        <td>1</td>
-        <td colspan="2" align="center">2</td>
-        <td rowspan="2">3</td>
-        <td rowspan="2" colspan="2" align="center">4</td>
+        <td colspan="3"></td>
+        <td colspan="3"></td>
+        <td colspan="3">Morning</td>
+        <td>lunch</td>
+        <td colspan="4">afternoon</td>
+        <td colspan="3">evening</td>
       </tr>
       <tr>
-        <td colspan="3" align="center">5</td>
+        <td colspan="3"></td>
+        <td colspan="3"></td>
+        <td>9-<br />10<br />am</td>
+        <td>10-<br />11<br />am</td>
+        <td>11-<br />12<br />am</td>
+        <td>1-2<br />pm</td>
+        <td>2-<br />3<br />pm</td>
+        <td>3-<br />4<br />pm</td>
+        <td>4-<br />5<br />pm</td>
+        <td>5-6 pm</td>
+        <td>6-<br />7<br />pm</td>
+        <td>7-<br />8<br />pm</td>
+        <td>8-9<br />pm</td>
       </tr>
       <tr>
-        <td>6</td>
-        <td>7</td>
-        <td>8</td>
-        <td colspan="2" align="center">9</td>
-        <td>10</td>
-      </tr>
-      <tr>
-        <td colspan="2" align="center">11</td>
-        <td colspan="3" align="center">12</td>
-        <td rowspan="7">13</td>
-      </tr>
-      <tr>
-        <td rowspan="3">14</td>
-        <td>15</td>
-        <td>16</td>
-        <td>17</td>
-        <td>18</td>
-      </tr>
-      <tr>
-        <td colspan="4" align="center">19</td>
-      </tr>
-      <tr>
-        <td colspan="2" align="center">20</td>
-        <td colspan="2" align="center">21</td>
-      </tr>
-      <tr>
-        <td colspan="5" align="center">22</td>
-      </tr>
-      <tr>
-        <td rowspan="2">23</td>
-        <td colspan="2" align="center">24</td>
-        <td>25</td>
-        <td>26</td>
-      </tr>
-      <tr>
-        <td>27</td>
-        <td colspan="2" align="center">28</td>
-        <td>29</td>
-      </tr>
-    </table>
-    <hr />
-    <h1>Task 5:</h1>
-    <hr />
-    <h1>Task 6:</h1>
-    <h2 align="center">Table Exercise</h2>
-    <table border="1" cellpadding="30">
-      <tr>
-        <th colspan="6" bgcolor="blue">
-          Final Examination Schedule - Fall 2008
-        </th>
-      </tr>
-      <tr>
-        <td bgcolor="yellow"></td>
-        <td bgcolor="yellow">
-          Monday<br />
-          Dec. 15
+        <td colspan="3" rowspan="2">Work</td>
+        <td colspan="3" align="center">Monday</td>
+        <td colspan="3">
+          Development<br />
+          Meeting
         </td>
-        <td bgcolor="yellow">
-          Tuesday<br />
-          Dec. 16
+        <td></td>
+        <td colspan="3">
+          Client<br />
+          Meeting
         </td>
-        <td bgcolor="yellow">
-          Wednesday<br />
-          Dec. 17
-        </td>
-        <td bgcolor="yellow">
-          Thursday<br />
-          Dec. 18
-        </td>
-        <td rowspan="5" bgcolor="pink" align="center">
-          H<br />O<br />M<br />E
-        </td>
+        <td>commute</td>
+        <td colspan="3" align="center">Free</td>
       </tr>
       <tr>
-        <th bgcolor="blue">8:00 a.m.</th>
-        <td bgcolor="blue" align="center">8M</td>
-        <td bgcolor="blue" align="center">9M</td>
-        <td bgcolor="blue" align="center">9/9:30T</td>
-        <td bgcolor="blue" align="center">8T</td>
+        <td colspan="3">Tuesday</td>
+        <td colspan="3" align="center">in Office</td>
+        <td></td>
+        <td colspan="7" align="center">in Office</td>
       </tr>
-      <tr align="center">
-        <th bgcolor="grey">10:00 a.m.</th>
-        <td bgcolor="grey">12/12:30T</td>
-        <td bgcolor="grey">11M</td>
-        <td bgcolor="grey">10M</td>
-        <td bgcolor="grey">11T</td>
+      <tr>
+        <td colspan="3" rowspan="2">Lecture</td>
+        <td colspan="3">Wednesday</td>
+        <td colspan="3" align="center">CSC205</td>
+        <td></td>
+        <td colspan="7" align="center">preparation</td>
       </tr>
-      <tr align="center">
-        <th bgcolor="blue">1:00 p.m.</th>
-        <td bgcolor="blue">1M</td>
-        <td bgcolor="blue">1T</td>
-        <td bgcolor="blue">10T</td>
-        <td bgcolor="blue">12M</td>
+      <tr>
+        <td colspan="3" align="center">Thursday</td>
+        <td colspan="3" align="center">MAM200</td>
+        <td></td>
+        <td colspan="3" align="center">Tutorials<br />for<br />MAM200</td>
+        <td colspan="4" align="center">Free</td>
       </tr>
-      <tr align="center">
-        <th bgcolor="grey">3.00 p.m.</th>
-        <td bgcolor="grey">3M</td>
-        <td bgcolor="grey">2T</td>
-        <td bgcolor="grey">2M</td>
-        <td bgcolor="grey">3/3:30T</td>
+      <tr>
+        <td colspan="3">Research</td>
+        <td colspan="3" align="center">Friday</td>
+        <td colspan="3" align="center">Research</td>
+        <td></td>
+        <td colspan="7" align="center">Research</td>
       </tr>
     </table>
     <hr />
