--- a/CSS/basiccss/index.html
+++ b/CSS/basiccss/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <div id="box">
+      Hello how are you
+    </div>
     <h1 id="abc" class="a">It is a heading</h1>
     <p id="p" class="fp">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Et suscipit quia
@@ -14,7 +17,7 @@
       distinctio voluptates similique quaerat, praesentium iste. Assumenda quia
       aliquid nam veniam.
     </p>
-    <h2>It is second heading</h2>
+    <h2 class="head2">It is second heading</h2>
     <p id="q" class="sp">
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique quae
       totam placeat, suscipit assumenda praesentium? Perferendis consequuntur
