--- a/CSS/CSS_Practice/task1/index.html
+++ b/CSS/CSS_Practice/task1/index.html
@@ -42,10 +42,12 @@
         </div>
         <div class="singup">
           <p id="do">
-            Don't have an account? <a href="" id="sign">Signing now</a>
+            Don't have an account? <a href="" id="sign">Signup now</a>
           </p>
         </div>
       </form>
+    </div>
+    <div class="loginform">
       <form>
         <div class="headlogin">
           <h2><span id="head">Reg</span>istration</h2>
@@ -85,13 +87,16 @@
           <br />
         </div>
         <div class="checkbox">
-          <input type="checkbox" name="checkbox" id="checkbox" />&nbsp;accept all terms & conditions
+          <input type="checkbox" name="checkbox" id="checkbox" />&nbsp;accept
+          all terms & conditions
         </div>
         <div class="buttonfamily">
           <button id="login">Register Now</button>
         </div>
         <div class="singup">
-          <p id="do">Already have a account? <a href="" id="sign">Login now</a></p>
+          <p id="do">
+            Already have a account? <a href="" id="sign">Login now</a>
+          </p>
         </div>
       </form>
     </div>
