css practice task 1 done

--- a/CSS/CSS_Practice/task1/index.html
+++ b/CSS/CSS_Practice/task1/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="loginform">
+    <section class="loginform">
       <form>
         <div class="headlogin">
           <h3><span id="head">Lo</span>gin</h3>
@@ -46,13 +46,13 @@
           </p>
         </div>
       </form>
-    </div>
-    <div class="loginform">
+    </section>
+    <section class="registrationform">
       <form>
-        <div class="headlogin">
-          <h2><span id="head">Reg</span>istration</h2>
+        <div class="reglogin">
+          <h2><span id="rhead">Reg</span>istration</h2>
         </div>
-        <div class="inputfamily">
+        <div class="inputrfamily">
           <input
             type="text"
             name="name"
@@ -86,19 +86,19 @@
           <hr />
           <br />
         </div>
-        <div class="checkbox">
-          <input type="checkbox" name="checkbox" id="checkbox" />&nbsp;accept
+        <div class="rcheckbox">
+          <input type="checkbox" name="checkbox" id="checkbox" />&nbsp;I accept
           all terms & conditions
         </div>
-        <div class="buttonfamily">
+        <div class="buttonrfamily">
           <button id="login">Register Now</button>
         </div>
-        <div class="singup">
+        <div class="rsingup">
           <p id="do">
-            Already have a account? <a href="" id="sign">Login now</a>
+            Already have a account? <a href="" id="log">Login now</a>
           </p>
         </div>
       </form>
-    </div>
+    </section>
   </body>
 </html>
