--- a/CSS/CSS_Practice/task1/index.html
+++ b/CSS/CSS_Practice/task1/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
   </head>
   <body>
     <section class="loginform">
@@ -13,6 +17,7 @@
           <h3><span id="head">Lo</span>gin</h3>
         </div>
         <div class="inputfamily">
+          <i class="material-icons">email</i>
           <input
             type="email"
             name="email"
@@ -21,6 +26,7 @@
           />
           <hr />
           <br />
+          <i class="material-icons">lock</i>
           <input
             type="password"
             name="password"
@@ -53,6 +59,7 @@
           <h2><span id="rhead">Reg</span>istration</h2>
         </div>
         <div class="inputrfamily">
+          <i class="material-icons">person</i>
           <input
             type="text"
             name="name"
@@ -61,6 +68,7 @@
           />
           <hr />
           <br />
+          <i class="material-icons">email</i>
           <input
             type="email"
             name="email"
@@ -69,6 +77,7 @@
           />
           <hr />
           <br />
+          <i class="material-icons">lock</i>
           <input
             type="password"
             name="password"
@@ -77,6 +86,7 @@
           />
           <hr />
           <br />
+          <i class="material-icons">lock</i>
           <input
             type="password"
             name="password"
