css practice task 1 update and task 2

--- a/CSS/CSS_Practice/task2/index.html
+++ b/CSS/CSS_Practice/task2/index.html
@@ -5,13 +5,54 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
   </head>
   <body>
     <section class="profile">
-      <img
-        src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?cs=srgb&dl=pexels-pixabay-220453.jpg&fm=jpg"
-        alt="profile photo"
-      />
+      <div class="imgs">
+        <img
+          src="https://images.pexels.com/photos/220453/pexels-photo-220453.jpeg?cs=srgb&dl=pexels-pixabay-220453.jpg&fm=jpg"
+          alt="profile photo"
+        />
+        <h3>LOREM IPSUM</h3>
+        <h5>SOFTWARE ENGINEER</h5>
+        <hr color="grey" />
+      </div>
+      <div class="contactinfo">
+        <h5>CONTACT INFO</h5>
+        <i class="material-icons">call</i>
+        <span id="text">+123456789</span>
+        <br />
+        <i class="material-icons">email</i>
+        <a href="">loremipsum@amil.com</a>
+        <br />
+        <i class="material-icons">web</i>
+        <a href="">lorem.ipsum.web</a>
+        <br />
+        <i class="material-icons">code</i>
+        <a href="">loremipsum.github.com</a>
+        <br />
+        <i class="material-icons">add</i>
+        <span id="text">70 Dream St, USA</span>
+      </div>
+      <div class="skills">
+        <h5>SKILLS</h5>
+        <div id="s">PYTHON, DJANGO & FLASK</div>
+        <div id="s">C++ & C++, JAVA</div>
+        <div id="s">JAVASCRIPT, ANGULAR</div>
+        <div id="s">HTML5 & CSS3</div>
+        <div id="s">SQL, MYSQL</div>
+        <div id="s">GIT & GITHUB</div>
+        <div id="s">LINUX, BASH/SHELL</div>
+      </div>
+      <div class="ref">
+        <h5>REFERENCES</h5>
+        <h6>LOREM IPSUM</h6>
+        <span id="text">Lorem, ipsum dolor.</span>
+      </div>
     </section>
   </body>
 </html>
