--- a/CSS/CSS_Practice/task2/index.html
+++ b/CSS/CSS_Practice/task2/index.html
@@ -52,6 +52,70 @@
         <h5>REFERENCES</h5>
         <h6>LOREM IPSUM</h6>
         <span id="text">Lorem, ipsum dolor.</span>
+        <br />
+        <i class="material-icons">call</i><span id="contact">+123456789</span>
+        <br />
+        <i class="material-icons">email</i
+        ><span id="emailc">loremipsum@amil.com</span>
+        <br />
+        <h6>LOREM IPSUM</h6>
+        <span id="text">Lorem, ipsum dolor.</span>
+        <br />
+        <i class="material-icons">call</i><span id="contact">+123456789</span>
+        <br />
+        <i class="material-icons">email</i
+        ><span id="emailc">loremipsum@amil.com</span>
+      </div>
+    </section>
+    <section class="about">
+      <h2 id="ah">ABOUT ME</h2>
+      <p id="aboutp">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi,
+        voluptas in? Iusto doloremque facilis maiores error praesentium natus
+        ipsam unde voluptates esse, dolorum eveniet eligendi deserunt ratione!
+        Odio quisquam aliquam perspiciatis minus exercitationem ab facere, illo
+        enim delectus animi dignissimos temporibus sed saepe dolorem voluptate
+        optio eos non incidunt! Ea. Lorem ipsum dolor sit, amet consectetur
+        adipisicing elit. Est, illo? Lorem ipsum dolor, sit amet consectetur
+        adipisicing elit. Voluptates, corrupti!
+      </p>
+      <p id="aboutp2">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut nisi amet
+        aliquid ab, non, modi distinctio nam reiciendis nihil consequuntur,
+        molestias minima libero neque? Exercitationem deserunt, fuga hic
+        voluptate labore ex, quasi eligendi eveniet quas fugiat cupiditate
+        recusandae laudantium. Placeat accusantium quae quidem nam quisquam sed
+        voluptatum quia, nisi perspiciatis?
+      </p>
+      <div id="exp">
+        <h2 id="exph">EXPERIANCE</h2>
+        <div id="expid">
+          <div id="expi">
+            <h4 id="c">COMPANY ONE</h4>
+            <p>2016-2018</p>
+            <h4 id="c2">COMPANY TWO</h4>
+            <p>2016-2018</p>
+            <h4 id="c3">COMPANY THREE</h4>
+            <p>2016-2018</p>
+          </div>
+          <div id="expd">
+            <h4>POSITION ONE</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Et
+              laborum non ullam exercitationem commodi
+            </p>
+            <h4>POSITION TWO</h4>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque
+              totam blanditiis et repellendus porro minus quibusdam aliquid
+            </p>
+            <h4>POSITION THREE</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
+              perspiciatis eveniet modi provident velit nisi,
+            </p>
+          </div>
+        </div>
       </div>
     </section>
   </body>
