--- a/javascript/event/index.html
+++ b/javascript/event/index.html
@@ -20,6 +20,16 @@
     <div id="smartBulb">Smart Bulb</div>
     <button id="SB_btn" onclick="sm_control()">on</button>
     <button onclick="sm_control2()">on/off</button>
+    <div id="bulb2">Bulb</div>
+    <div id="ball">
+      <div id="ball1">C1</div>
+      <div id="ball2">C2</div>
+      <div id="ball3">C3</div>
+      <div id="ball4">C4</div>
+      <div id="ball5">C5</div>
+      <div id="ball6">C6</div>
+      <div id="ball7">C7</div>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
